# pyexptest

./: .gitignore  LICENSE  README.md  app.py  mkdocs.yml  pyproject.toml  vercel.json
.github/workflows/: docs.yml
docs/examples/: multi-variant.md  timing.md
docs/getting-started/: quickstart.md
docs/guide/: analyzing-results.md  confidence-intervals.md  diff-in-diff.md  sample-size.md
frontend/: index.html  package-lock.json
frontend/src/components/: HelpTooltip.jsx  TestTypeSelector.jsx
frontend/src/components/charts/: EffectSizeBar.jsx  SurvivalPlot.jsx  index.js
frontend/src/pages/: DiffInDiffCalculator.jsx  PowerCalculator.jsx  SampleSizeCalculator.jsx  TimingCalculator.jsx
pyexptest/: README.md  __init__.py  requirements.txt
pyexptest/docs/: index.md
pyexptest/docs/api/: conversion.md  magnitude.md  timing.md
pyexptest/docs/examples/: conversion.md  multi-variant.md  revenue.md
pyexptest/docs/getting-started/: installation.md  quickstart.md
pyexptest/docs/guide/: analyzing-results.md  confidence-intervals.md  diff-in-diff.md  multi-variant.md  p-values.md  sample-size.md
pyexptest/effects/outcome/: __init__.py  timing.py
pyexptest/frontend/: package-lock.json  package.json
pyexptest/frontend/src/: App.jsx  index.css
pyexptest/frontend/src/components/: FormField.jsx
pyexptest/frontend/src/components/charts/: CIComparisonChart.jsx  DiffInDiffChart.jsx  DistributionChart.jsx  PowerCurveChart.jsx  RateComparisonChart.jsx
pyexptest/frontend/src/pages/: DiffInDiffCalculator.jsx  PowerCalculator.jsx  SampleSizeCalculator.jsx  SignificanceCalculator.jsx  TimingCalculator.jsx
pyexptest/pyexptest/: api.py
pyexptest/pyexptest/effects/: __init__.py
pyexptest/pyexptest/effects/outcome/: base.py  conversion.py  magnitude.py  timing.py
pyexptest/pyexptest/utils/: __init__.py  stats.py
pyexptest/tests/: test_magnitude.py
tests/: test_conversion.py  test_timing.py
